--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
   <div class="container mt-4">
     <form action="/user/signup" method="post">
       <div class="row mb-3">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Full Name</label>
+        <label for="fullName" class="col-sm-2 col-form-label">Full Name</label>
         <div class="col-sm-10">
           <input 
           name="fullName"
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="row mb-3">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
           <input 
           name="email"
