--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,17 +8,19 @@
   <%- include('./partials/nav') %> 
 
   <div class="container mt-3">
-    <% blogs.forEach(blog => { %>
-      <div class="card" style="width: 18rem;">
-        <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title"><%= blog.title %></h5>
-          
-          <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
+    <div class="row row-cols-4">
+      <% blogs.forEach(blog => { %>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="<%= blog.coverImageURL %>" class="card-img-top" width="400px" height="250px">
+          <div class="card-body">
+            <h5 class="card-title"><%= blog.title %></h5>
+            <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
+          </div>
         </div>
       </div>
-    <% }) %>
-
+      <% }) %>
+    </div>
   </div>
 
 
